Added line numbers to console output

--- a/src/extensions/default/bramble/htmlContent/console.html
+++ b/src/extensions/default/bramble/htmlContent/console.html
@@ -5,6 +5,7 @@
         <button title="{{CONSOLE_CLOSE_TOOLTIP}}"href="#" class="close"></button>
     </div>
     <div class="console">
+      <div class="lines"></div>
       <div class="helper">
         <span class="helper-text">{{&CONSOLE_HELPTEXT}}</span>
       </div>
