added the slider value indicator

--- a/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
+++ b/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
@@ -12,25 +12,25 @@
         <div id="individualCornerArea">
             <div class="border-radius-input">
                 <label for="horizontal-offset-value">top-left-corner </label> :
-                <input id="top-left-slider" type="range" min="0" max="100" step="1"> px
+                <input id="top-left-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="tltext"></span>
             </div>
             <div class="border-radius-input">
                 <label for="vertical-offset-value">top-right-corner</label> :
-                <input id="top-right-slider" type="range" min="0" max="100" step="1"> px
+                <input id="top-right-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="trtext"></span>
             </div>
             <div class="border-radius-input">
                 <label for="blur-radius-value">buttom-left-corner</label> :
-                <input id="bottom-left-slider" type="range" min="0" max="100" step="1"> px
+                <input id="bottom-left-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="bltext"></span>
             </div>
             <div class="border-radius-input">
                 <label for="spread-radius-value">buttom-right-corner</label> :
-                <input id="bottom-right-slider" type="range" min="0" max="100" step="1"> px
+                <input id="bottom-right-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="brtext"></span>
             </div>
         </div>
         <div id="allCornersArea">
             <div class="border-radius-input">
                 <label for="spread-radius-value">all-corners</label> :
-                <input id="all-corner-slider" type="range" min="0" max="100" step="1"> px
+                <input id="all-corner-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="alltext"></span>
             </div>
         <div>
         <footer>
