--- a/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
+++ b/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
@@ -13,24 +13,49 @@
             <div class="border-radius-input">
                 <label for="horizontal-offset-value">top-left-corner </label> :
                 <input id="top-left-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="tltext"></span>
+                <ul class="button-bar ul-padding-left" id="tl-radio">
+                    <li id="tl-radio-px" title="tl-radio-px"><a href="#" tabindex="0">px</a></li>
+                    <li title="tl-radio-em" disabled="true" id="tl-radio-em"><a href="#" tabindex="0">em</a></li>
+                    <li title="tl-radio-percent" disabled="true" id="tl-radio-percent"><a href="#" tabindex="0">% </a></li>                    
+                </ul>
             </div>
             <div class="border-radius-input">
                 <label for="vertical-offset-value">top-right-corner</label> :
                 <input id="top-right-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="trtext"></span>
+                <ul class="button-bar ul-padding-left" id="tr-radio">
+                    <li id="tr-radio-px" title="tr-radio-px"><a href="#" tabindex="0">px</a></li>
+                    <li title="tr-radio-em" disabled="true" id="tr-radio-em"><a href="#" tabindex="0">em</a></li>
+                    <li title="tr-radio-percent" disabled="true" id="tr-radio-percent"><a href="#" tabindex="0">% </a></li>                    
+                </ul>
             </div>
             <div class="border-radius-input">
                 <label for="blur-radius-value">buttom-left-corner</label> :
                 <input id="bottom-left-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="bltext"></span>
+                <ul class="button-bar ul-padding-left" id="bl-radio">
+                    <li id="bl-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
+                    <li title="bl-radio-em" disabled="true" id="bl-radio-em"><a href="#" tabindex="0">em</a></li>
+                    <li title="bl-radio-percent" disabled="true" id="bl-radio-percent"><a href="#" tabindex="0">% </a></li>                    
+                </ul>
             </div>
             <div class="border-radius-input">
                 <label for="spread-radius-value">buttom-right-corner</label> :
                 <input id="bottom-right-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="brtext"></span>
+                <ul class="button-bar ul-padding-left" id="br-radio">
+                    <li id="br-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
+                    <li title="br-radio-em" disabled="true" id="br-radio-em"><a href="#" tabindex="0">em</a></li>
+                    <li title="br-radio-percent" disabled="true" id="br-radio-percent"><a href="#" tabindex="0">% </a></li>                    
+                </ul>
             </div>
         </div>
         <div id="allCornersArea">
             <div class="border-radius-input">
                 <label for="spread-radius-value">all-corners</label> :
                 <input id="all-corner-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="alltext"></span>
+                <ul class="button-bar ul-padding-left" id="all-radio">
+                    <li id="all-radio-px" title="all-radio-px"><a href="#" tabindex="0">px</a></li>
+                    <li title="all-radio-em" disabled="true" id="all-radio-em"><a href="#" tabindex="0">em</a></li>
+                    <li title="all-radio-percent" disabled="true" id="all-radio-percent"><a href="#" tabindex="0">% </a></li>                    
+                </ul>
             </div>
         <div>
         <footer>
