--- a/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
+++ b/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
@@ -1,68 +1,119 @@
 <div tabindex="-1" class="border-radius-editor">
-    <section>
-        <!-- 17/10/2017 - Will work on this later, once logic has been implemented 
-        <div class="sliders">
-            <div class="horizontal-offset-slider slider">
-                <div class="opacity-gradient gradient-overlay"></div>
-                <div tabindex="0" class="selector-base">
-                    <div class="selector"></div>
-                </div>
-            </div>
-        </div> -->
-        <div id="individualCornerArea">
-            <div class="border-radius-input">
-                <label for="horizontal-offset-value">top-left-corner </label> :
-                <input id="top-left-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="tltext"></span>
-                <ul class="button-bar ul-padding-left" id="tl-radio">
-                    <li id="tl-radio-px" title="tl-radio-px"><a href="#" tabindex="0">px</a></li>
-                    <li title="tl-radio-em" disabled="true" id="tl-radio-em"><a href="#" tabindex="0">em</a></li>
-                    <li title="tl-radio-percent" disabled="true" id="tl-radio-percent"><a href="#" tabindex="0">% </a></li>                    
-                </ul>
-            </div>
-            <div class="border-radius-input">
-                <label for="vertical-offset-value">top-right-corner</label> :
-                <input id="top-right-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="trtext"></span>
-                <ul class="button-bar ul-padding-left" id="tr-radio">
-                    <li id="tr-radio-px" title="tr-radio-px"><a href="#" tabindex="0">px</a></li>
-                    <li title="tr-radio-em" disabled="true" id="tr-radio-em"><a href="#" tabindex="0">em</a></li>
-                    <li title="tr-radio-percent" disabled="true" id="tr-radio-percent"><a href="#" tabindex="0">% </a></li>                    
-                </ul>
-            </div>
-            <div class="border-radius-input">
-                <label for="blur-radius-value">buttom-left-corner</label> :
-                <input id="bottom-left-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="bltext"></span>
-                <ul class="button-bar ul-padding-left" id="bl-radio">
-                    <li id="bl-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
-                    <li title="bl-radio-em" disabled="true" id="bl-radio-em"><a href="#" tabindex="0">em</a></li>
-                    <li title="bl-radio-percent" disabled="true" id="bl-radio-percent"><a href="#" tabindex="0">% </a></li>                    
-                </ul>
-            </div>
-            <div class="border-radius-input">
-                <label for="spread-radius-value">buttom-right-corner</label> :
-                <input id="bottom-right-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="brtext"></span>
-                <ul class="button-bar ul-padding-left" id="br-radio">
-                    <li id="br-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
-                    <li title="br-radio-em" disabled="true" id="br-radio-em"><a href="#" tabindex="0">em</a></li>
-                    <li title="br-radio-percent" disabled="true" id="br-radio-percent"><a href="#" tabindex="0">% </a></li>                    
-                </ul>
-            </div>
-        </div>
-        <div id="allCornersArea">
-            <div class="border-radius-input">
-                <label for="spread-radius-value">all-corners</label> :
-                <input id="all-corner-slider" type="range" min="0" max="100" step="1"><span class="slider-indicator" id="alltext"></span>
-                <ul class="button-bar ul-padding-left" id="all-radio">
-                    <li id="all-radio-px" title="all-radio-px"><a href="#" tabindex="0">px</a></li>
-                    <li title="all-radio-em" disabled="true" id="all-radio-em"><a href="#" tabindex="0">em</a></li>
-                    <li title="all-radio-percent" disabled="true" id="all-radio-percent"><a href="#" tabindex="0">% </a></li>                    
-                </ul>
-            </div>
-        <div>
-        <footer>
-            <ul class="button-bar">
-              <li id="allCorners" title="All Corners"><a href="#" tabindex="0">All Corners</a></li>
-              <li title="Individual Corners" disabled="true" id="individualCorners"><a href="#" tabindex="0">Individual Corners</a></li>
-            </ul>
-        </footer>
-    </section>
+    <header>
+        <label>Set radius for</label>
+        <ul class="button-bar">
+          <li id="allCorners" title="All Corners">
+              <a href="#" tabindex="0">All Corners</a>
+          </li>
+          <li title="Individual Corners" disabled="true" id="individualCorners">
+              <a href="#" tabindex="0">Individual Corners</a>
+          </li>
+        </ul>
+    </header>
+
+    <div id="individualCornerArea">
+
+        <table>
+            <tr class="border-radius-input">
+                <td class="label-container">
+                    <div class="tl corner-icon"></div>
+                    <!-- Top left -->
+                </td>
+                <td class="slider-container">
+                   <input id="top-left-slider" type="range" min="0" max="100" step="1">
+                </td>
+                <td class="slider-value">
+                   <span class="slider-indicator" id="tltext"></span>
+                </td>
+                <td class="units-container">
+                    <ul class="button-bar ul-padding-left" id="tl-radio">
+                        <li id="tl-radio-px" title="tl-radio-px"><a href="#" tabindex="0">px</a></li>
+                        <li title="tl-radio-percent" disabled="true" id="tl-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="tl-radio-em" disabled="true" id="tl-radio-em"><a href="#" tabindex="0">em</a></li>
+                    </ul>
+                </td>
+            </tr>
+
+            <tr class="border-radius-input">
+                <td class="label-container">
+                    <div class="tr corner-icon"></div>
+                    <!-- Top right -->
+                </td>
+                <td class="slider-container">
+                    <input id="top-right-slider" type="range" min="0" max="100" step="1">
+                </td>
+                <td>
+                    <span class="slider-indicator" id="trtext"></span>
+                </td>
+                <td class="units-container">
+                    <ul class="button-bar ul-padding-left" id="tr-radio">
+                        <li id="tr-radio-px" title="tr-radio-px"><a href="#" tabindex="0">px</a></li>
+                        <li title="tr-radio-percent" disabled="true" id="tr-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="tr-radio-em" disabled="true" id="tr-radio-em"><a href="#" tabindex="0">em</a></li>
+                    </ul>
+                </td>
+            </tr>
+
+            <tr class="border-radius-input">
+                <td class="label-container">
+                    <div class="br corner-icon"></div>
+                    <!-- Bottom right -->
+                </td>
+                <td class="slider-container">
+                   <input id="bottom-right-slider" type="range" min="0" max="100" step="1">
+                </td>
+                <td>
+                   <span class="slider-indicator" id="brtext"></span>
+                </td>
+                <td class="units-container">
+                   <ul class="button-bar ul-padding-left" id="br-radio">
+                       <li id="br-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
+                       <li title="br-radio-percent" disabled="true" id="br-radio-percent"><a href="#" tabindex="0">%</a></li>
+                       <li title="br-radio-em" disabled="true" id="br-radio-em"><a href="#" tabindex="0">em</a></li>
+                   </ul>
+                </td>
+            </tr>
+
+            <tr class="border-radius-input">
+                <td class="label-container">
+                    <div class="bl corner-icon"></div>
+                    <!-- Bottom left -->
+                </td>
+                <td class="slider-container">
+                    <input id="bottom-left-slider" type="range" min="0" max="100" step="1">
+                </td>
+                <td>
+                    <span class="slider-indicator" id="bltext"></span>
+                </td>
+                <td class="units-container">
+                    <ul class="button-bar ul-padding-left" id="bl-radio">
+                        <li id="bl-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
+                        <li title="bl-radio-percent" disabled="true" id="bl-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="bl-radio-em" disabled="true" id="bl-radio-em"><a href="#" tabindex="0">em</a></li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="allCornersArea">
+       <table>
+           <tr class="border-radius-input">
+               <td class="label-container">All corners</td>
+               <td class="slider-container">
+                   <input id="all-corner-slider" type="range" min="0" max="100" step="1">
+               </td>
+               <td class="slider-value">
+                  <span class="slider-indicator" id="alltext"></span>
+               </td>
+               <td class="units-container">
+                    <ul class="button-bar ul-padding-left" id="all-radio">
+                        <li id="all-radio-px" title="all-radio-px"><a href="#" tabindex="0">px</a></li>
+                        <li title="all-radio-percent" disabled="true" id="all-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="all-radio-em" disabled="true" id="all-radio-em"><a href="#" tabindex="0">em</a></li>
+                    </ul>
+               </td>
+           </tr>
+       </table>
+    <div>
 </div>
