--- a/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
+++ b/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
@@ -1,29 +1,20 @@
 <div tabindex="-1" class="box-shadow-editor">
     <section>
-        <!-- 17/10/2017 - Will work on this later, once logic has been implemented 
-        <div class="sliders">
-            <div class="horizontal-offset-slider slider">
-                <div class="opacity-gradient gradient-overlay"></div>
-                <div tabindex="0" class="selector-base">
-                    <div class="selector"></div>
-                </div>
-            </div>
-        </div> -->
         <div class="horizontal-offset-input box-shadow-input">
             <label for="horizontal-offset-value">Horizontal Offset </label> :
-            <input id="horizontal-offset-value" /> px
+            <input id="horizontal-offset-value" type="range" min="-100" max="100" /> px
         </div>
         <div class="vertical-offset-input box-shadow-input">
             <label for="vertical-offset-value">Vertical Offset </label> :
-            <input id="vertical-offset-value" /> px
+            <input id="vertical-offset-value" type="range" min="-100" max="100" /> px
         </div>
         <div class="blur-radius-input box-shadow-input">
             <label for="blur-radius-value">Blur Radius </label> :
-            <input id="blur-radius-value" /> px
+            <input id="blur-radius-value" type="range" min="-100" max="100" /> px
         </div>
         <div class="spread-radius-input box-shadow-input">
             <label for="spread-radius-value">Spread Radius </label> :
-            <input id="spread-radius-value" /> px
+            <input id="spread-radius-value" type="range" min="-100" max="100" /> px
         </div>
         <div class="color-input box-shadow-input">
             <label for="color-value">Color </label> :
