Fixed few indentations and comments

--- a/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
+++ b/src/extensions/default/InlineBorderRadiusEditor/BorderRadiusEditorTemplate.html
@@ -1,11 +1,11 @@
 <div tabindex="-1" class="border-radius-editor">
     <header>
         <ul class="button-bar">
-          <li id="allCorners" title="All Corners">
-              <a href="#" tabindex="0">All Corners</a>
+          <li id="allCorners" title="{{ALL_CORNERS}}">
+              <a href="#" tabindex="0">{{ALL_CORNERS}}</a>
           </li>
-          <li title="Individual Corners" disabled="true" id="individualCorners">
-              <a href="#" tabindex="0">Individual Corners</a>
+          <li title="{{INDIVIDUAL_CORNERS}}" disabled="true" id="individualCorners">
+              <a href="#" tabindex="0">{{INDIVIDUAL_CORNERS}}</a>
           </li>
         </ul>
     </header>
@@ -25,9 +25,9 @@
                 </td>
                 <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="tl-radio">
-                        <li id="tl-radio-px" title="tl-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="tl-radio-percent" disabled="true" id="tl-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="tl-radio-em" disabled="true" id="tl-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="tl-radio-px" title="{{TL_RADIO_PX}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{TL_RADIO_PERCENT}}" disabled="true" id="tl-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{TL_RADIO_EM}}" disabled="true" id="tl-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                 </td>
             </tr>
@@ -44,9 +44,9 @@
                 </td>
                 <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="tr-radio">
-                        <li id="tr-radio-px" title="tr-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="tr-radio-percent" disabled="true" id="tr-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="tr-radio-em" disabled="true" id="tr-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="tr-radio-px" title="{{TR_RADIO_PX}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{TR_RADIO_PERCENT}}" disabled="true" id="tr-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{TR_RADIO_EM}}" disabled="true" id="tr-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                 </td>
             </tr>
@@ -63,9 +63,9 @@
                 </td>
                 <td class="units-container">
                    <ul class="button-bar ul-padding-left" id="br-radio">
-                       <li id="br-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
-                       <li title="br-radio-percent" disabled="true" id="br-radio-percent"><a href="#" tabindex="0">%</a></li>
-                       <li title="br-radio-em" disabled="true" id="br-radio-em"><a href="#" tabindex="0">em</a></li>
+                       <li id="br-radio-px" title="{{BR_RADIO_PX}}"><a href="#" tabindex="0">px</a></li>
+                       <li title="{{BR_RADIO_PERCENT}}" disabled="true" id="br-radio-percent"><a href="#" tabindex="0">%</a></li>
+                       <li title="{{BR_RADIO_EM}}" disabled="true" id="br-radio-em"><a href="#" tabindex="0">em</a></li>
                    </ul>
                 </td>
             </tr>
@@ -82,9 +82,9 @@
                 </td>
                 <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="bl-radio">
-                        <li id="bl-radio-px" title="br-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="bl-radio-percent" disabled="true" id="bl-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="bl-radio-em" disabled="true" id="bl-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="bl-radio-px" title="{{BL_RADIO_PX}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{BL_RADIO_PERCENT}}" disabled="true" id="bl-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{BL_RADIO_EM}}" disabled="true" id="bl-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                 </td>
             </tr>
@@ -110,9 +110,9 @@
                </td>
                <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="all-radio">
-                        <li id="all-radio-px" title="all-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="all-radio-percent" disabled="true" id="all-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="all-radio-em" disabled="true" id="all-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="all-radio-px" title="{{ALL_RADIO_PX}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{ALL_RADIO_PERCENT}}" disabled="true" id="all-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{ALL_RADIO_EM}}" disabled="true" id="all-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                </td>
            </tr>
