--- a/src/extensions/default/InlinePaddingEditor/PaddingEditorTemplate.html
+++ b/src/extensions/default/InlinePaddingEditor/PaddingEditorTemplate.html
@@ -1,12 +1,12 @@
 <div tabindex="-1" class="padding-editor">
     <header>
-        <label>Set padding for</label>
+        <label>{{SET_PADDING_FOR}}</label>
         <ul class="button-bar">
-          <li id="allSides" title="All Sides">
-              <a href="#" tabindex="0">All Sides</a>
+          <li id="allSides" title="{{ALL_SIDES}}">
+              <a href="#" tabindex="0">{{ALL_SIDES}}</a>
           </li>
-          <li title="Individual Sides" disabled="true" id="individualSides">
-              <a href="#" tabindex="0">Individual Sides</a>
+          <li title="{{INDIVIDUAL_SIDES}}" disabled="true" id="individualSides">
+              <a href="#" tabindex="0">{{INDIVIDUAL_SIDES}}</a>
           </li>
         </ul>
     </header>
@@ -27,9 +27,9 @@
                 </td>
                 <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="top-radio">
-                        <li id="top-radio-px" title="top-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="top-radio-percent" disabled="true" id="top-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="top-radio-em" disabled="true" id="top-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="top-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="top-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{EM_UNIT}}" disabled="true" id="top-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                 </td>
             </tr>
@@ -47,9 +47,9 @@
                 </td>
                 <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="right-radio">
-                        <li id="right-radio-px" title="right-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="right-radio-percent" disabled="true" id="right-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="right-radio-em" disabled="true" id="right-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="right-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="right-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{EM_UNIT}}" disabled="true" id="right-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                 </td>
             </tr>
@@ -67,9 +67,9 @@
                 </td>
                 <td class="units-container">
                    <ul class="button-bar ul-padding-left" id="bottom-radio">
-                       <li id="bottom-radio-px" title="bottom-radio-px"><a href="#" tabindex="0">px</a></li>
-                       <li title="bottom-radio-percent" disabled="true" id="bottom-radio-percent"><a href="#" tabindex="0">%</a></li>
-                       <li title="bottom-radio-em" disabled="true" id="bottom-radio-em"><a href="#" tabindex="0">em</a></li>
+                       <li id="bottom-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
+                       <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="bottom-radio-percent"><a href="#" tabindex="0">%</a></li>
+                       <li title="{{EM_UNIT}}" disabled="true" id="bottom-radio-em"><a href="#" tabindex="0">em</a></li>
                    </ul>
                 </td>
             </tr>
@@ -87,9 +87,9 @@
                 </td>
                 <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="left-radio">
-                        <li id="left-radio-px" title="left-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="left-radio-percent" disabled="true" id="left-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="left-radio-em" disabled="true" id="left-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="left-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="left-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{EM_UNIT}}" disabled="true" id="left-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                 </td>
             </tr>
@@ -108,12 +108,13 @@
                </td>
                <td class="units-container">
                     <ul class="button-bar ul-padding-left" id="all-sides-radio">
-                        <li id="all-sides-radio-px" title="all-sides-radio-px"><a href="#" tabindex="0">px</a></li>
-                        <li title="all-sides-radio-percent" disabled="true" id="all-sides-radio-percent"><a href="#" tabindex="0">%</a></li>
-                        <li title="all-sides-radio-em" disabled="true" id="all-sides-radio-em"><a href="#" tabindex="0">em</a></li>
+                        <li id="all-sides-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
+                        <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="all-sides-radio-percent"><a href="#" tabindex="0">%</a></li>
+                        <li title="{{EM_UNIT}}" disabled="true" id="all-sides-radio-em"><a href="#" tabindex="0">em</a></li>
                     </ul>
                </td>
            </tr>
        </table>
     <div>
 </div>
+
