Changed padding to BoxModel

--- a/src/extensions/default/InlineBoxModelEditor/BoxModelEditorTemplate.html
+++ b/src/extensions/default/InlineBoxModelEditor/BoxModelEditorTemplate.html
@@ -1,4 +1,4 @@
-<div tabindex="-1" class="padding-editor">
+<div tabindex="-1" class="boxmodel-editor">
     <header>
         <label>{{SET_PADDING_FOR}}</label>
         <ul class="button-bar">
@@ -14,7 +14,7 @@
     <div id="individualSidesArea">
 
         <table>
-            <tr class="padding-input">
+            <tr class="boxmodel-input">
                 <td class="label-container">
                     <div class="top side-icon"></div>
                     <!-- Top left -->
@@ -26,7 +26,7 @@
                    <span class="slider-indicator" id="top-text"></span>
                 </td>
                 <td class="units-container">
-                    <ul class="button-bar ul-padding-left" id="top-radio">
+                    <ul class="button-bar ul-boxmodel-left" id="top-radio">
                         <li id="top-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
                         <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="top-radio-percent"><a href="#" tabindex="0">%</a></li>
                         <li title="{{EM_UNIT}}" disabled="true" id="top-radio-em"><a href="#" tabindex="0">em</a></li>
@@ -34,7 +34,7 @@
                 </td>
             </tr>
 
-            <tr class="padding-input">
+            <tr class="boxmodel-input">
                 <td class="label-container">
                     <div class="right side-icon"></div>
                     <!-- Top right -->
@@ -46,7 +46,7 @@
                     <span class="slider-indicator" id="right-text"></span>
                 </td>
                 <td class="units-container">
-                    <ul class="button-bar ul-padding-left" id="right-radio">
+                    <ul class="button-bar ul-boxmodel-left" id="right-radio">
                         <li id="right-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
                         <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="right-radio-percent"><a href="#" tabindex="0">%</a></li>
                         <li title="{{EM_UNIT}}" disabled="true" id="right-radio-em"><a href="#" tabindex="0">em</a></li>
@@ -54,7 +54,7 @@
                 </td>
             </tr>
 
-            <tr class="padding-input">
+            <tr class="boxmodel-input">
                 <td class="label-container">
                     <div class="bottom side-icon"></div>
                     <!-- Bottom right -->
@@ -66,7 +66,7 @@
                    <span class="slider-indicator" id="bottom-text"></span>
                 </td>
                 <td class="units-container">
-                   <ul class="button-bar ul-padding-left" id="bottom-radio">
+                   <ul class="button-bar ul-boxmodel-left" id="bottom-radio">
                        <li id="bottom-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
                        <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="bottom-radio-percent"><a href="#" tabindex="0">%</a></li>
                        <li title="{{EM_UNIT}}" disabled="true" id="bottom-radio-em"><a href="#" tabindex="0">em</a></li>
@@ -74,7 +74,7 @@
                 </td>
             </tr>
 
-            <tr class="padding-input">
+            <tr class="boxmodel-input">
                 <td class="label-container">
                     <div class="left side-icon"></div>
                     <!-- Bottom left -->
@@ -86,7 +86,7 @@
                     <span class="slider-indicator" id="left-text"></span>
                 </td>
                 <td class="units-container">
-                    <ul class="button-bar ul-padding-left" id="left-radio">
+                    <ul class="button-bar ul-boxmodel-left" id="left-radio">
                         <li id="left-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
                         <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="left-radio-percent"><a href="#" tabindex="0">%</a></li>
                         <li title="{{EM_UNIT}}" disabled="true" id="left-radio-em"><a href="#" tabindex="0">em</a></li>
@@ -98,7 +98,7 @@
 
     <div id="allSidesArea">
        <table>
-           <tr class="padding-input">
+           <tr class="boxmodel-input">
                <td class="label-container">All sides</td>
                <td class="slider-container">
                    <input id="all-sides-slider" type="range" min="0" max="100" step="1">
@@ -107,7 +107,7 @@
                   <span class="slider-indicator" id="all-sides-text"></span>
                </td>
                <td class="units-container">
-                    <ul class="button-bar ul-padding-left" id="all-sides-radio">
+                    <ul class="button-bar ul-boxmodel-left" id="all-sides-radio">
                         <li id="all-sides-radio-px" title="{{PIXEL_UNIT}}"><a href="#" tabindex="0">px</a></li>
                         <li title="{{PERCENTAGE_UNIT}}" disabled="true" id="all-sides-radio-percent"><a href="#" tabindex="0">%</a></li>
                         <li title="{{EM_UNIT}}" disabled="true" id="all-sides-radio-em"><a href="#" tabindex="0">em</a></li>
