--- a/src/extensions/default/InlineBoxModelEditor/BoxModelEditorTemplate.html
+++ b/src/extensions/default/InlineBoxModelEditor/BoxModelEditorTemplate.html
@@ -1,6 +1,6 @@
 <div tabindex="-1" class="boxmodel-editor">
     <header>
-        <label>{{SET_PADDING_FOR}}</label>
+        <label>{{BOX_MODEL_HEADER}}</label>
         <ul class="button-bar">
           <li id="allSides" title="{{ALL_SIDES}}">
               <a href="#" tabindex="0">{{ALL_SIDES}}</a>
@@ -16,7 +16,7 @@
         <table>
             <tr class="boxmodel-input">
                 <td class="label-container">
-                    <div class="top side-icon"></div>
+                    <div class="top {{box-model-icon-class-name}}"></div>
                     <!-- Top left -->
                 </td>
                 <td class="slider-container">
@@ -36,7 +36,7 @@
 
             <tr class="boxmodel-input">
                 <td class="label-container">
-                    <div class="right side-icon"></div>
+                    <div class="right {{box-model-icon-class-name}}"></div>
                     <!-- Top right -->
                 </td>
                 <td class="slider-container">
@@ -56,7 +56,7 @@
 
             <tr class="boxmodel-input">
                 <td class="label-container">
-                    <div class="bottom side-icon"></div>
+                    <div class="bottom {{box-model-icon-class-name}}"></div>
                     <!-- Bottom right -->
                 </td>
                 <td class="slider-container">
@@ -76,7 +76,7 @@
 
             <tr class="boxmodel-input">
                 <td class="label-container">
-                    <div class="left side-icon"></div>
+                    <div class="left {{box-model-icon-class-name}}"></div>
                     <!-- Bottom left -->
                 </td>
                 <td class="slider-container">
