--- a/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
+++ b/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
@@ -1,24 +1,124 @@
 <div tabindex="-1" class="box-shadow-editor">
-    <section>
-        <div class="horizontal-offset-input box-shadow-input">
-            <label for="horizontal-offset-value">Horizontal Offset </label> :
-            <input id="horizontal-offset-value" type="range" min="-100" max="100" /> px
-        </div>
-        <div class="vertical-offset-input box-shadow-input">
-            <label for="vertical-offset-value">Vertical Offset </label> :
-            <input id="vertical-offset-value" type="range" min="-100" max="100" /> px
-        </div>
-        <div class="blur-radius-input box-shadow-input">
-            <label for="blur-radius-value">Blur Radius </label> :
-            <input id="blur-radius-value" type="range" min="-100" max="100" /> px
-        </div>
-        <div class="spread-radius-input box-shadow-input">
-            <label for="spread-radius-value">Spread Radius </label> :
-            <input id="spread-radius-value" type="range" min="-100" max="100" /> px
-        </div>
-        <div class="color-input box-shadow-input">
-            <label for="color-value">Color </label> :
-            <input id="color-value" />
-        </div>
-    </section>
+
+    <table>
+        <tr class="box-shadow-input" id="h-shadow">
+            <td class="label-container">
+                Horizontal
+            </td>
+            <td class="slider-container">
+                <input type="range" min="-100" max="100" />
+            </td>
+            <td class="slider-value">
+               <span class="slider-indicator" id="h-shadow-text"></span>
+            </td>
+            <td class="units-container">
+                <ul class="button-bar ul-padding-left">
+                    <li class="px" title="{{PIXEL_UNIT}}">
+                        <a href="#" tabindex="0">px</a>
+                    </li>
+                    <li class="%" title="{{PERCENTAGE_UNIT}}">
+                        <a href="#" tabindex="0">%</a>
+                    </li>
+                    <li class="em" title="{{EM_UNIT}}">
+                        <a href="#" tabindex="0">em</a>
+                    </li>
+                </ul>
+            </td>
+        </tr>
+
+        <tr class="box-shadow-input" id="v-shadow">
+            <td class="label-container">
+                Vertical
+            </td>
+            <td class="slider-container">
+                <input type="range" min="-100" max="100" />
+            </td>
+            <td class="slider-value">
+               <span class="slider-indicator" id="v-shadow-text"></span>
+            </td>
+            <td class="units-container">
+                <ul class="button-bar ul-padding-left">
+                    <li class="px" title="{{PIXEL_UNIT}}">
+                        <a href="#" tabindex="0">px</a>
+                    </li>
+                    <li class="%" title="{{PERCENTAGE_UNIT}}">
+                        <a href="#" tabindex="0">%</a>
+                    </li>
+                    <li class="em" title="{{EM_UNIT}}">
+                        <a href="#" tabindex="0">em</a>
+                    </li>
+                </ul>
+            </td>
+        </tr>
+
+        <tr class="box-shadow-input" id="blur">
+            <td class="label-container">
+                Blur
+            </td>
+            <td class="slider-container">
+                <input type="range" min="-100" max="100" />
+            </td>
+            <td class="slider-value">
+               <span class="slider-indicator" id="blur-text"></span>
+            </td>
+            <td class="units-container">
+                <ul class="button-bar ul-padding-left">
+                    <li class="px" title="{{PIXEL_UNIT}}">
+                        <a href="#" tabindex="0">px</a>
+                    </li>
+                    <li class="%" title="{{PERCENTAGE_UNIT}}">
+                        <a href="#" tabindex="0">%</a>
+                    </li>
+                    <li class="em" title="{{EM_UNIT}}">
+                        <a href="#" tabindex="0">em</a>
+                    </li>
+                </ul>
+            </td>
+        </tr>
+
+        <tr class="box-shadow-input" id="spread">
+            <td class="label-container">
+                Spread
+            </td>
+            <td class="slider-container">
+                <input type="range" min="-100" max="100" />
+            </td>
+            <td class="slider-value">
+               <span class="slider-indicator" id="spread-text"></span>
+            </td>
+            <td class="units-container">
+                <ul class="button-bar ul-padding-left">
+                    <li class="px" title="{{PIXEL_UNIT}}">
+                        <a href="#" tabindex="0">px</a>
+                    </li>
+                    <li class="%" title="{{PERCENTAGE_UNIT}}">
+                        <a href="#" tabindex="0">%</a>
+                    </li>
+                    <li class="em" title="{{EM_UNIT}}">
+                        <a href="#" tabindex="0">em</a>
+                    </li>
+                </ul>
+            </td>
+        </tr>
+
+        <tr class="box-shadow-input" id="color">
+            <td class="label-container">
+                Color
+            </td>
+            <td class="slider-container">
+                <input type="input" />
+            </td>            
+        </tr>
+
+        <!-- **To be Added** <tr class="box-shadow-input" id="inset">
+            <td class="label-container">
+                Inset shadow
+            </td>
+            <td class="slider-container">
+                <input type="radio" name="inset" value="enable">
+                <input type="radio" name="inset" value="disable">
+            </td>
+        </tr> -->
+    </table>
+
 </div>
