Added inset functionality to box-shadow editor
Created BoxShadowInset that responds and provides control over `inset` property in box-shadow

--- a/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
+++ b/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
@@ -110,15 +110,16 @@
             </td>            
         </tr>
 
-        <!-- **To be Added** <tr class="box-shadow-input" id="inset">
+        <tr class="box-shadow-input" id="inset">
             <td class="label-container">
                 Inset shadow
             </td>
-            <td class="slider-container">
-                <input type="radio" name="inset" value="enable">
-                <input type="radio" name="inset" value="disable">
+            <td class="toggle-switch-container">
+                <label class="toggle-switch">
+                    <input type="checkbox" value="enabled">
+                    <span class="toggle-switch-slider"></span>
+                </label>
             </td>
-        </tr> -->
+        </tr>
     </table>
-
 </div>
