--- a/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
+++ b/src/extensions/default/InlineBoxShadowEditor/BoxShadowEditorTemplate.html
@@ -105,7 +105,7 @@
             <td class="label-container">
                 Color
             </td>
-            <td class="slider-container">
+            <td class="color-container">
                 <input type="input" />
             </td>            
         </tr>
